feat(els): refactor slot assignment to database-first coordination
- Replace Redis-based slot coordination with PostgreSQL atomic operations
- Add database_slot_operations.py for atomic slot assignment with retry logic
- Implement db_failure_tracker.py and db_pending_content_ops.py for robust state management
- Add three new Alembic migrations for slot inventory, failures, and batch completion tracking
- Refactor batch_essay_tracker_impl.py to use database coordination instead of Redis
- Update content_assignment_service.py to handle database-first slot assignment
- Add comprehensive distributed and integration tests for concurrent slot assignment
- Improve idempotency handling in essay_repository_idempotency.py
- Add batch metrics refresh functionality and database purge scripts
- Update API Gateway rate limiter and JWT utils for better error handling

This refactor addresses race conditions in concurrent slot assignment by moving
from Redis-based coordination to PostgreSQL's ACID guarantees, improving
reliability under high concurrency while maintaining idempotency.

--- a/services/essay_lifecycle_service/pyproject.toml
+++ b/services/essay_lifecycle_service/pyproject.toml
@@ -63,6 +63,7 @@ dev = "python app.py --reload"
 test = "pytest tests/ -v"
 format = "ruff format . && ruff check --fix ."
 typecheck = "mypy ."
+db-purge-guest = "python -m services.essay_lifecycle_service.scripts.db_purge_guest --older-than-days 30"
 
 # Alembic database migration commands
 migrate-upgrade = "alembic upgrade head"
