feat: add pipeline credit checking and denial events for batch orchestrator

--- a/services/entitlements_service/policies/default.yaml
+++ b/services/entitlements_service/policies/default.yaml
@@ -5,36 +5,27 @@
 # unless hot-reloading is enabled.
 
 costs:
-  # Free internal processing operations (no LLM API calls)
-  batch_create: 0
-  spellcheck: 0
-  nlp_analysis: 0
-  content_upload: 0
-  student_matching: 0
+  # Resource-based costs (per LLM API call)
+  cj_comparison: 1              # Per pairwise comparison in CJ Assessment
+  ai_feedback_generation: 5     # Per essay feedback generation
+  ai_editor_revision: 3         # Per AI editor revision (future)
   
-  # Paid LLM operations (per essay/operation)
-  cj_assessment: 10      # Comparative Judgment assessment per essay
-  ai_feedback: 5         # AI-generated feedback per essay
-  content_analysis: 3    # Advanced content analysis per essay
+  # Free internal operations (no external API costs)
+  spellcheck: 0                 # Internal processing via LanguageTool
+  nlp_analysis: 0               # Internal NLP processing
+  batch_create: 0               # Batch orchestration
+  student_matching: 0           # NLP-based student matching
+  content_upload: 0             # File uploads
 
 rate_limits:
-  # Operations per time window (format: count/period)
-  # Periods: hour, day, week, month
+  # Resource-based limits (prevent API abuse)
+  cj_comparison: 10000/day      # Max CJ comparisons per day
+  ai_feedback_generation: 500/day   # Max AI feedback generations per day
   
-  # Batch operations
-  batch_create: 60/hour         # Maximum 60 batch uploads per hour
-  batch_process: 10/day         # Maximum 10 batch processing requests per day
-  
-  # Assessment operations
-  cj_assessment: 100/day        # Maximum 100 CJ assessments per day
-  ai_feedback: 200/day          # Maximum 200 AI feedback requests per day
-  
-  # Content operations
-  content_upload: 500/hour      # Maximum 500 file uploads per hour
-  content_analysis: 300/day     # Maximum 300 content analyses per day
-  
-  # Administrative operations
-  credit_adjustment: 10/hour    # Maximum 10 manual adjustments per hour
+  # Operation-based limits (prevent platform abuse)
+  batch_create: 60/hour         # Maximum batch uploads per hour
+  pipeline_request: 100/hour    # Maximum pipeline requests per hour
+  credit_adjustment: 10/hour    # Administrative adjustments
 
 signup_bonuses:
   # Initial credit allocation for new accounts
@@ -45,5 +36,5 @@ signup_bonuses:
 cache_ttl: 300      # Cache policies in Redis for 5 minutes (300 seconds)
 
 # System configuration
-version: "1.0"      # Policy schema version
-last_updated: "2025-01-24T12:00:00Z"
+version: "1.1"      # Policy schema version - updated for resource-based pricing
+last_updated: "2025-09-06T12:00:00Z"
