--- a/pyproject.toml
+++ b/pyproject.toml
@@ -277,8 +277,10 @@ python_functions = "test_*"
 addopts = "-s -v --durations=10 --log-cli-level=INFO --import-mode=importlib -m 'not (financial or slow or docker)'"
 log_cli = true
 log_cli_level = "INFO"
-log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s:%(filename)s:%(lineno)s %(message)s"
+log_cli_format = "%(message)s"
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+log_format = "%(message)s"
+log_file_format = "%(message)s"
 asyncio_mode = "auto"
 
 markers = [
