--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -320,6 +320,29 @@ services:
       - OTEL_TRACES_EXPORTER=otlp
       - OTEL_METRICS_EXPORTER=none
 
+  # Language Tool Service with development optimizations
+  language_tool_service:
+    build:
+      context: .
+      dockerfile: services/language_tool_service/Dockerfile.dev
+      target: development
+    volumes:
+      - ./services/language_tool_service:/app/services/language_tool_service:cached
+      - ./libs/common_core/src:/app/libs/common_core/src:cached
+      - ./libs/huleedu_service_libs/src:/app/libs/huleedu_service_libs/src:cached
+      - /app/services/language_tool_service/__pycache__
+      - /app/services/language_tool_service/__pypackages__
+    environment:
+      - ENV_TYPE=development
+      - ENVIRONMENT=development
+      - LOG_LEVEL=DEBUG
+      - LANGUAGE_TOOL_SERVICE_LOG_LEVEL=DEBUG
+      # Observability
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
+      - OTEL_SERVICE_NAME=language_tool_service
+      - OTEL_TRACES_EXPORTER=otlp
+      - OTEL_METRICS_EXPORTER=none
+
 # Development-specific volumes for faster file watching
 volumes:
   # Use local driver with better performance for development
