--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,6 +132,7 @@ module = [
     "services.identity_service.*",
     "services.email_service.*",
     "services.entitlements_service.*",
+    "services.language_tool_service.*",
 ]
 ignore_missing_imports = false
 disallow_untyped_defs = true
@@ -266,7 +267,8 @@ testpaths = [
     "services/nlp_service/tests",
     "services/identity_service/tests",
     "services/email_service/tests",
-    "services/entitlements_service/tests"
+    "services/entitlements_service/tests",
+    "services/language_tool_service/tests"
 ]
 pythonpath = [
     "."
@@ -377,6 +379,7 @@ dev = [
     "-e file:///${PROJECT_ROOT}/services/identity_service",
     "-e file:///${PROJECT_ROOT}/services/email_service",
     "-e file:///${PROJECT_ROOT}/services/entitlements_service",
+    "-e file:///${PROJECT_ROOT}/services/language_tool_service",
 ]
 [build-system]
 requires = ["pdm-backend"]
