--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ __pycache__/
 # temp_folders and temp_files used for testing or development
 cj_essay_assessment/
 cj_ai_essay_assessment/*.xml
+data/
+datasets/
 /*.xml
 
 # Security - JWT and other secrets
