feat(nlp): add comprehensive Language Tool interaction diagnostics and resilience improvements
- Add extensive diagnostic test for NLP/Language Tool service interaction patterns
- Enhance LanguageToolServiceClient with detailed response logging and language mapping
- Improve test resilience across integration and unit test suites
- Update feature pipeline integration task documentation and planning
- Suppress testcontainers deprecation warnings in pytest configuration

The diagnostic test provides deep visibility into Language Tool service responses
and helps isolate the root cause of 'str' object attribute errors in the NLP pipeline.
Enhanced logging in the client implementation will aid in production debugging.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -309,6 +309,10 @@ filterwarnings = [
     "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning:weasel.util.config",
     # Suppress lexical_diversity's internal pkg_resources usage (library issue, not our code)
     "ignore:pkg_resources is deprecated as an API:UserWarning:lexical_diversity.lex_div",
+    # Suppress testcontainers internal decorator deprecation (library issue, not our code)
+    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers.*",
+    # Suppress testcontainers wait_for_logs deprecation (library issue, not our code)
+    "ignore:The wait_for_logs function with string or callable predicates is deprecated:DeprecationWarning:testcontainers.kafka.*",
 ]
 
 
