docs(language-tool): add n-gram implementation task and update patterns
- Add TASK-052M documentation for n-gram implementation planning
- Update language tool service patterns documentation
- Enhance API models and protocols for future n-gram support
- Improve test coverage and fix related test cases
- Update dependencies in pdm.lock
- Refactor language tool client implementation
- Update README with latest service information

This commit prepares the codebase for future n-gram analysis features while
maintaining existing functionality. The changes focus on documentation,
code organization, and test improvements.

--- a/services/nlp_service/pyproject.toml
+++ b/services/nlp_service/pyproject.toml
@@ -21,15 +21,13 @@ dependencies = [
     "asyncpg",
     "alembic",
     "rapidfuzz",
-    "python-docx",  # For testing with real .docx essays
-    # Advanced NLP metrics dependencies
-    "spacy>=3.7.0",  # Core NLP framework
-    "wordfreq>=3.0.0",  # Zipf frequency calculations for lexical sophistication
-    "lexical-diversity>=0.1.1",  # MTLD/HDD metrics for lexical diversity
-    "textdescriptives>=2.8.0",  # Dependency distance and coherence metrics
-    "langdetect>=1.0.9",  # Language detection
-    "gensim>=4.3.0",  # For phraseology metrics (PMI/NPMI calculations)
-    # SpaCy language models - required for NLP analysis
+    "python-docx",
+    "spacy>=3.7.0",
+    "wordfreq",
+    "lexical-diversity",
+    "textdescriptives",
+    "langdetect",
+    "gensim",
     "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
     "sv-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/sv_core_news_sm-3.8.0/sv_core_news_sm-3.8.0-py3-none-any.whl",
 ]
