docs: enhance NLP pipeline documentation and update dependencies
- Improve markdown formatting and structure across task documents
- Add detailed documentation for feature pipeline integration
- Update gensim dependency to >=4.3.3
- Update pdm.lock with latest dependency resolutions
- Expand NLP analyzer integration tests
- Fix code block formatting in n-gram implementation doc
- Update NLP dependencies implementation

--- a/services/nlp_service/pyproject.toml
+++ b/services/nlp_service/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "lexical-diversity",
     "textdescriptives",
     "langdetect",
-    "gensim",
+    "gensim>=4.3.3",
     "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
     "sv-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/sv_core_news_sm-3.8.0/sv_core_news_sm-3.8.0-py3-none-any.whl",
 ]
