refactor: Extract spell normalization to shared library and update test infrastructure
- Moved spell normalization logic to new `huleedu_nlp_shared` library
- Updated spellchecker service to use shared normalization components
- Improved test maintainability with `create_default_spell_logic_for_tests` helper
- Fixed test content-type assertions to be more flexible
- Updated dependencies in pyproject.toml and pdm.lock
- Standardized test imports and mock usage across test files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -370,6 +370,7 @@ obs-status = "docker compose ps prometheus grafana loki jaeger promtail alertman
 dev = [
     "-e file:///${PROJECT_ROOT}/libs/common_core",
     "-e file:///${PROJECT_ROOT}/libs/huleedu_service_libs",
+    "-e file:///${PROJECT_ROOT}/libs/huleedu_nlp_shared",
     "-e file:///${PROJECT_ROOT}/services/content_service",
     "-e file:///${PROJECT_ROOT}/services/spellchecker_service",
     "-e file:///${PROJECT_ROOT}/services/batch_orchestrator_service",
