feat(nlp): enhance feature pipeline integration and error handling
- Add comprehensive error handling for missing NLP metrics and grammar analysis
- Integrate FeaturePipeline with Dependency Injection for better reusability
- Include feature outputs in NLP completion events
- Update logging to reflect feature pipeline completion
- Add proper type hints and null checks for feature pipeline results
- Update DI container to provide FeaturePipeline as a shared resource
- Pass feature outputs through the event publishing pipeline

This change improves the robustness of the NLP analysis flow and ensures proper error reporting when expected data is missing from the feature pipeline.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ secrets/
 # Service data directories
 scripts/utils/md-to-html-converter
 services/spellchecker_service/data/corrected_essays
+services/spellchecker_service/data/whitelist/
 data/corrected_essays
 test_uploads/
 
