refactor(essay_lifecycle): remove Redis batch state management
- Remove Redis-based batch state management implementation including:
  - Redis batch state tracking
  - Redis failure tracking
  - Pending content operations
  - Slot operations and script management
  - Related test files
- Update DI configuration to remove Redis dependencies
- Clean up .gitignore of Redis-related patterns

This change removes the Redis-based state management in favor of a PostgreSQL-based approach, as part of the ongoing architectural consolidation.

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ test_uploads/
 # Large data files
 services/spellchecker_service/data/cross-verified-database.csv.gz
 services/spellchecker_service/data/*.csv.gz
+services/spellchecker_service/data/whitelist/combined_whitelist.txt
 
 # Local development stores and caches
 .local_*
@@ -60,3 +61,5 @@ services/*/tmp/
 llm_response_logs/
 
 .DS_Store
+services/spellchecker_service/data/whitelist/combined_whitelist.txt
+.gitignore
