refactor: Major refactoring of NLP and spellchecking services
### Core Changes
- **Spellchecker Service**:
  - Enhanced parallel processing implementation
  - Improved whitelist functionality with real essay testing
  - Added comprehensive test coverage for edge cases
  - Optimized event routing and error handling

### NLP Service Updates
- **Dependency Injection**:
  - Split di_nlp_dependencies.py into focused modules
  - Updated di.py to use new modular structure
- **Language Tool Integration**:
  - Improved client implementation
  - Enhanced grammar analysis pipeline
  - Added end-to-end testing for student matching
- **Analysis Pipeline**:
  - Refactored NLP analyzer implementation
  - Improved extraction and matching pipelines
  - Added integration tests for all pipeline components

### Test Improvements
- **Unit Tests**:
  - Added comprehensive test cases for service result handlers
  - Improved idempotency testing
  - Enhanced test coverage for edge cases
- **Integration Tests**:
  - Added real-world test scenarios
  - Improved test data handling
  - Enhanced test reliability and performance

### Infrastructure
- **Docker**:
  - Updated service configurations
  - Improved development and production setups
- **Dependencies**:
  - Updated pyproject.toml files
  - Added new development scripts (dev.sh, prod.sh)

### Documentation
- Added detailed documentation for new features
- Updated service READMEs
- Added integration test plans

### Bug Fixes
- Fixed race conditions in parallel processing
- Resolved issues with event handling
- Addressed performance bottlenecks

### Code Quality
- Standardized import ordering
- Improved type hints
- Enhanced error handling and logging
- Removed unused code and dependencies

This commit represents a significant improvement in the stability, performance, and maintainability of the NLP and spellchecking services, with particular focus on parallel processing capabilities and test coverage.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,6 +16,7 @@ services:
       - ./services/nlp_service:/app/services/nlp_service:cached
       - ./libs/common_core/src:/app/libs/common_core/src:cached
       - ./libs/huleedu_service_libs/src:/app/libs/huleedu_service_libs/src:cached
+      - ./libs/huleedu_nlp_shared/src:/app/libs/huleedu_nlp_shared/src:cached
       # Exclude __pycache__ and other build artifacts
       - /app/services/nlp_service/__pycache__
       - /app/services/nlp_service/__pypackages__
@@ -209,6 +210,7 @@ services:
       - ./services/spellchecker_service:/app/services/spellchecker_service:cached
       - ./libs/common_core/src:/app/libs/common_core/src:cached
       - ./libs/huleedu_service_libs/src:/app/libs/huleedu_service_libs/src:cached
+      - ./libs/huleedu_nlp_shared/src:/app/libs/huleedu_nlp_shared/src:cached
       - /app/services/spellchecker_service/__pycache__
       - /app/services/spellchecker_service/__pypackages__
     environment:
