--- a/libs/huleedu_nlp_shared/pyproject.toml
+++ b/libs/huleedu_nlp_shared/pyproject.toml
@@ -6,6 +6,11 @@ requires-python = ">=3.11"
 authors = [
     { name = "Olof Larsson", email = "paunchygent@gmail.com" },
 ]
+dependencies = [
+    "pyspellchecker",
+    "pydantic",
+    "huleedu-common-core",
+]
 
 [build-system]
 requires = ["pdm-backend"]
@@ -13,3 +18,6 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[tool.pdm.resolution.overrides]
+huleedu-common-core = "file:///app/libs/common_core"
