feat: add essay instructions integration plan and bayesian model verification tools

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ llm_response_logs/
 .DS_Store
 services/spellchecker_service/data/whitelist/combined_whitelist.txt
 .gitignore
+docs/rapport_till_kollegor/
