feat: add modular kernel improvements and evaluation metrics
- Added feature toggles for isolated testing of argmax decision, leave-one-out alignment, precision weighting, and neutral ESS metrics
- Added evaluation harness to run ablation studies and measure impact of each feature
- Documented baseline and toggle-specific metrics for confidence, grade indices, and neutral ESS coverage
- Removed minimum ESS gating thresholds - neutral ESS is now informational only
- Updated documentation in HANDOFF.md an

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,10 @@ dependencies = [
     "psutil",
     "pyarrow",
     "fastparquet",
-    "weasyprint>=66.0",
+    "weasyprint",
+    "typer",
+    "click",
+    "textual",
 ]
 
 [dependency-groups]
