feat: fix TUI executable build and remove CLI component
- Fixed NameError in workflow_executor.py by properly importing Input/Select widgets outside TYPE_CHECKING block
- Removed CLI executable (redistribute-pairs) from build script to focus only on TUI component
- Updated build_standalone.sh to only build and test the redistribute-tui executable
- Added PyInstaller configuration for single-file TUI build with scientific dependencies
- Updated smoke tests to verify TUI executable functionality

This

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,8 @@ llm_response_logs/
 services/spellchecker_service/data/whitelist/combined_whitelist.txt
 .gitignore
 docs/rapport_till_kollegor/
+
+# PyInstaller
+build/
+dist/
+*.spec
