--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-dotenv",
     "pypandoc",
     "aiohttp",
+    "crossfiledialog",
     "httpx",
     "pytest",
     "pytest-asyncio",
