--- a/services/nlp_service/Dockerfile.dev
+++ b/services/nlp_service/Dockerfile.dev
@@ -1,15 +1,15 @@
-# Development-optimized Dockerfile with improved layer caching
-# Use this for development with volume mounts for hot-reload
+# Development-optimized Dockerfile aligned with root-level PDM lockfile
 
 FROM python:3.11-slim AS base
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PDM_USE_VENV=false \
-    ENV_TYPE=docker \
-    PYTHONPATH=/app
+    PDM_IGNORE_ACTIVE_VENV=1 \
+    PROJECT_ROOT=/app \
+    PYTHONPATH=/app \
+    ENV_TYPE=docker
 
-# Install system dependencies (rarely change - good cache layer)
 RUN apt-get update && apt-get install -y \
     --no-install-recommends \
     curl \
@@ -17,73 +17,78 @@ RUN apt-get update && apt-get install -y \
     python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Install PDM (rarely changes - good cache layer)
 RUN pip install --no-cache-dir pdm
 
 WORKDIR /app
 
+# ==================================================
+# Shared dependency layers (root pyproject + lock)
+# ==================================================
+FROM base AS deps-base
+
+COPY pyproject.toml pdm.lock ./
+
+# Shared library metadata + sources (needed for editable installs)
+COPY libs/common_core/pyproject.toml libs/common_core/pyproject.toml
+COPY libs/common_core/src/ libs/common_core/src/
+COPY libs/huleedu_service_libs/pyproject.toml libs/huleedu_service_libs/pyproject.toml
+COPY libs/huleedu_service_libs/src/ libs/huleedu_service_libs/src/
+COPY libs/huleedu_nlp_shared/pyproject.toml libs/huleedu_nlp_shared/pyproject.toml
+COPY libs/huleedu_nlp_shared/src/ libs/huleedu_nlp_shared/src/
+
+# Service metadata (pyproject files only) so editable installs resolve without relocking
+COPY services/api_gateway_service/pyproject.toml services/api_gateway_service/pyproject.toml
+COPY services/batch_conductor_service/pyproject.toml services/batch_conductor_service/pyproject.toml
+COPY services/batch_orchestrator_service/pyproject.toml services/batch_orchestrator_service/pyproject.toml
+COPY services/cj_assessment_service/pyproject.toml services/cj_assessment_service/pyproject.toml
+COPY services/class_management_service/pyproject.toml services/class_management_service/pyproject.toml
+COPY services/content_service/pyproject.toml services/content_service/pyproject.toml
+COPY services/email_service/pyproject.toml services/email_service/pyproject.toml
+COPY services/entitlements_service/pyproject.toml services/entitlements_service/pyproject.toml
+COPY services/essay_lifecycle_service/pyproject.toml services/essay_lifecycle_service/pyproject.toml
+COPY services/file_service/pyproject.toml services/file_service/pyproject.toml
+COPY services/identity_service/pyproject.toml services/identity_service/pyproject.toml
+COPY services/language_tool_service/pyproject.toml services/language_tool_service/pyproject.toml
+COPY services/llm_provider_service/pyproject.toml services/llm_provider_service/pyproject.toml
+COPY services/nlp_service/pyproject.toml services/nlp_service/pyproject.toml
+COPY services/result_aggregator_service/pyproject.toml services/result_aggregator_service/pyproject.toml
+COPY services/spellchecker_service/pyproject.toml services/spellchecker_service/pyproject.toml
+COPY services/websocket_service/pyproject.toml services/websocket_service/pyproject.toml
+
+FROM deps-base AS deps-dev
+RUN pdm install --dev --frozen-lockfile
+
+FROM deps-base AS deps-prod
+RUN pdm install --prod --frozen-lockfile
+
 # ========================================
-# DEPENDENCY INSTALLATION OPTIMIZATION
-# ========================================
-
-# First, copy only dependency files for better caching
-# This layer will only rebuild when dependencies change
-COPY libs/common_core/pyproject.toml /app/libs/common_core/pyproject.toml
-COPY libs/huleedu_service_libs/pyproject.toml /app/libs/huleedu_service_libs/pyproject.toml
-COPY libs/huleedu_nlp_shared/pyproject.toml /app/libs/huleedu_nlp_shared/pyproject.toml
-COPY services/nlp_service/pyproject.toml /app/services/nlp_service/pyproject.toml
-
-# Generate lockfile if it doesn't exist (better than --frozen-lockfile for dev)
-WORKDIR /app/services/nlp_service
-RUN pdm lock --lockfile pdm.lock.docker || echo "Lock generation failed, will install without lock"
-
-# Now copy the source files for shared libraries
-# These change more frequently but still less than service code
-COPY libs/common_core/src/ /app/libs/common_core/src/
-COPY libs/huleedu_service_libs/src/ /app/libs/huleedu_service_libs/src/
-COPY libs/huleedu_nlp_shared/src/ /app/libs/huleedu_nlp_shared/src/
-
-# Install dependencies (this layer caches well if pyproject.toml doesn't change)
-# Use lockfile if it exists, otherwise install normally
-RUN if [ -f "pdm.lock.docker" ]; then \
-        pdm install --dev --lockfile pdm.lock.docker; \
-    else \
-        pdm install --dev; \
-    fi
-
-# ========================================
-# DEVELOPMENT STAGE (for volume mounts)
+# DEVELOPMENT STAGE
 # ========================================
 FROM base AS development
 
-# Create user first
-RUN groupadd -r nlpuser && useradd --no-log-init -r -g nlpuser nlpuser
-
-# Copy service code (this layer changes most frequently)
+COPY --from=deps-dev /app /app
 COPY services/nlp_service/ /app/services/nlp_service/
 
-# Set permissions
-RUN chown -R nlpuser:nlpuser /app
-
-USER nlpuser
-WORKDIR /app/services/nlp_service
-
-# Use pdm run for development with auto-reload
-CMD ["pdm", "run", "start"]
-
-# ========================================
-# PRODUCTION STAGE (for deployment)
-# ========================================
-FROM base AS production
-
-# Copy service code for production build
-COPY services/nlp_service/ /app/services/nlp_service/
-
-# Create user and set permissions
 RUN groupadd -r nlpuser && useradd --no-log-init -r -g nlpuser nlpuser \
     && chown -R nlpuser:nlpuser /app
 
 USER nlpuser
-WORKDIR /app/services/nlp_service
+WORKDIR /app
 
-CMD ["pdm", "run", "start"]
+CMD ["pdm", "run", "-p", "/app", "python", "services/nlp_service/worker_main.py"]
+
+# ========================================
+# PRODUCTION STAGE
+# ========================================
+FROM base AS production
+
+COPY --from=deps-prod /app /app
+COPY services/nlp_service/ /app/services/nlp_service/
+
+RUN groupadd -r nlpuser && useradd --no-log-init -r -g nlpuser nlpuser \
+    && chown -R nlpuser:nlpuser /app
+
+USER nlpuser
+WORKDIR /app
+
+CMD ["pdm", "run", "-p", "/app", "python", "services/nlp_service/worker_main.py"]
